@@ -10,7 +10,7 @@ exec wish "$0" -- "$@"
 ######################################################
 # Version: 2.0.0
 # Release: alpha
-# Build: 17082022162534
+# Build: 24082022134211
 ######################################################
 
 # определим текущую версию, релиз и т.д.
